--- a/D00/ex02/doft.css
+++ b/D00/ex02/doft.css
@@ -2,32 +2,50 @@ body {
 	background-color:#585858;
 }
 
+#main-container {
+	width:80%;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+}
+
 .header-block {
 	position: relative;
 	border-radius: 10px;
 	background-color: #909090;
-	margin: 10% 10% 0.8% 10%;
+	margin: 2% 0;
 	padding: 0.5% 0.5% 0.5% 0.5%;
 	box-shadow: 10px 10px 12px black;
 }
 
+.second-container {
+	display: flex;
+	justify-content:space-around;
+}
+
 .inline-block-left {
-	display: inline-block;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	background-color: #909090;
 	border-radius: 10px;
-	margin: 0.5% 12% 0.5% 12%;
+	padding: 2%;
 	box-shadow: 10px 10px 12px black;
+	height: 50%;
 }
 
 .inline-block-middle {
 	display: inline-block;
 	background-color: #909090;
 	border-radius: 10px;
-	margin: 0.5% 20% 0.5% 20%;
+	padding: 10px;
 	box-shadow: 10px 10px 12px black;
 }
-.image {
-	margin: 10% 1% 0% 1%;
+.image-border-red {
+	border: 6px solid red;
+	margin: 7%;
+	/*margin: 10% 1% 0% 1%;*/
 }
 .img_top {
 	position: absolute;
