--- a/D00/ex02/doft.css
+++ b/D00/ex02/doft.css
@@ -20,7 +20,7 @@ body {
 }
 
 .text-change-size {
-	font-size: 23px;
+	font-size: 28px;
 	font-family: monospace;
 }
 
@@ -45,14 +45,15 @@ body {
 
 .green-block {
 	background-color: rgb(140, 253, 142);
-	width: 394px;
-	font-family: sans-serif;
-	font-size: 14px;
+	width: 528px;
+	font-family:  sans-serif;
+	font-size: 17px;
 	border-radius: 10px;
-	padding: 1%;
+	padding: .5% .5% 4% .5%;
 	box-shadow: 10px 10px 12px black;
 	position: relative;
-	top: -100px;
+	top: -40px;
+	left: -70px;
 }
 .inline-block-middle {
 	display: inline-block;
@@ -64,10 +65,23 @@ body {
 }
 
 .wrapper-input {
-	margin-top: 15px;
+	margin-top: 0px;
 }
 .input-field {
-	width: 80%;
+	width: 68%;
+	margin: 0 5px;
+	border-style: inset;
+	border-width: 2.3px;
+}
+
+.input-submit {
+	padding: 2px 5px;
+    border:0 none;
+	background-color: rgb(242, 241, 242);
+	font-size: 13px;
+	font-family: sans-serif;
+	border: 1px groove #D8D8D8;
+	border-radius: 3px;
 }
 .img-cluster {
 	max-width: 100%;
@@ -76,14 +90,13 @@ body {
 .image-border-red {
 	border: 6px solid red;
 	margin: 7%;
-	/*margin: 10% 1% 0% 1%;*/
 }
 
 .image-brick {
 	background: url("./resources/brick.jpg");
 	background-repeat: repeat;
-	width:130px;
-	height:73px;
+	width:120px;
+	height:70px;
 }
 .img_top {
 	position: absolute;
