--- a/D00/ex04/menu.css
+++ b/D00/ex04/menu.css
@@ -19,7 +19,7 @@
 }
 
 .dropbtn{
-    background-color:rgv(149, 24, 104) ;
+    background-color:#3e6e20 ;
     color: white;
     padding: 16px;
     font-size: 16px;
