--- a/D00/ex02/doft.css
+++ b/D00/ex02/doft.css
@@ -2,10 +2,6 @@ body {
 	background-color:#585858;
 }
 
-.title-font {
-	font-family: cursive;
-}
-
 #main-container {
 	width:80%;
 	margin: 0 auto;
@@ -24,7 +20,7 @@ body {
 }
 
 .text-change-size {
-	font-size: 28px;
+	font-size: 23px;
 	font-family: monospace;
 }
 
@@ -36,7 +32,7 @@ body {
 	justify-content:space-around;
 }
 
-.extern-block-left {
+.extern-block {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -47,33 +43,19 @@ body {
 	box-shadow: 10px 10px 12px black;
 }
 
-.extern-block-right {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background-color: #909090;
-	border-radius: 10px;
-	height: 370px;
-	padding: 1%;
-	box-shadow: 10px 10px 12px black;
-}
-
 .green-block {
 	background-color: rgb(140, 253, 142);
-	width: 528px;
-	font-family:  sans-serif;
-	font-size: 17px;
+	width: 394px;
+	font-family: sans-serif;
+	font-size: 14px;
 	border-radius: 10px;
-	padding: .5% .5% 4% .5%;
+	padding: 1%;
 	box-shadow: 10px 10px 12px black;
 	position: relative;
-	top: -40px;
-	left: -70px;
+	top: -100px;
 }
-
 .inline-block-middle {
 	display: inline-block;
-	position: relative;
 	background-color: #909090;
 	border-radius: 10px;
 	padding: 10px;
@@ -81,54 +63,27 @@ body {
 	width: 70%;
 }
 
-.apple-link {
-	position: absolute;
-	bottom: 19%;
-	right: 3%;
-	width: 19%;
-	height: 25%;
-}
-
-.ikea-link {
-	position: absolute;
-	bottom: 12%;
-	left: 32%;
-	width: 11%;
-	height: 31%;
-}
-
 .wrapper-input {
-	margin-top: 0px;
+	margin-top: 15px;
 }
 .input-field {
-	width: 68%;
-	margin: 0 5px;
-	border-style: inset;
-	border-width: 2.3px;
-}
-
-.input-submit {
-	padding: 2px 5px;
-	border:0 none;
-	background-color: rgb(242, 241, 242);
-	font-size: 13px;
-	font-family: sans-serif;
-	border: 1px groove #D8D8D8;
-	border-radius: 3px;
+	width: 80%;
 }
 .img-cluster {
-	width: 100%;
+	max-width: 100%;
+	max-height: 100%;
 }
 .image-border-red {
 	border: 6px solid red;
 	margin: 7%;
+	/*margin: 10% 1% 0% 1%;*/
 }
 
 .image-brick {
 	background: url("./resources/brick.jpg");
 	background-repeat: repeat;
-	width:120px;
-	height:70px;
+	width:130px;
+	height:73px;
 }
 .img_top {
 	position: absolute;
