--- a/RUSH00/e-commerce.css
+++ b/RUSH00/e-commerce.css
@@ -20,7 +20,6 @@ body {
 	/*rgb(248, 187, 79);*/
 
 	padding: 1.5% 1.5%;
-	border: 2px solid red;
 	font-size: 15;
 }
 
@@ -75,14 +74,15 @@ wh {
 #menu-deroulant li {
 /* on place les liens du menu horizontalement */
     display: inline-block;
-	background: black;
+	background: pink;
+	padding: 10%;
 }
 #menu-deroulant ul li {
 /* on enlève ce comportement pour les liens du sous menu */
     display: flex;
 	position: center;
-	background:black;
-	padding: 10% 10%;
+	background:red;
+	padding: 10%;
 	width: 100%;
 }
 #menu-deroulant a {
@@ -109,8 +109,37 @@ wh {
 
 .price{
 	background.color = grey;
-	padding: 1.5% 1.5%;
-	border: 2px solid red;
+	/*padding: 1% 1.5%;*/
+	border: 2px solid #E5E2E3;
+	/*#FF2990;*/
 	font-size: 2vw;
 	text-align: center;
+}
+
+.command{
+	display: inline-flex;
+	/*vertical-align: center;*/
+	border-radius: 6px;
+	width:57%;
+	/*height:15%;*/
+	padding:3%;
+	margin:2% 0;
+	border: 5px solid black;
+	background-color: black;
+	font-size: 1.7vw;
+	font-family: sans-serif;
+}
+
+.promo {
+	background-color: #FFBF00;
+	width:100%;
+	padding: 2% 10%;
+	font-size: 3vw;
+}
+
+.site-name{
+	background-color: #EFEFFB;
+	width: 100%;
+	padding: 1% 0%;
+	font-size: 2vw;
 }
