--- a/RUSH00/e-commerce.css
+++ b/RUSH00/e-commerce.css
@@ -1,10 +1,14 @@
+*, html, body {
+	box-sizing: border-box;
+}
+
 body {
 	background-color: white;
 }
 
 .all-page {
 	/*display: flex;*/
-
+	min-width: 680px;
 }
 
 .head-img {
@@ -58,76 +62,31 @@ txtpanier{
 	max-height: 100%;
 }
 
-.dropbtn{
-    background-color: pink ;
-    color: white;
-    padding: 3px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
+.menu-deroulant {
+	/*border: 2px solid red;*/
+	background-color: black;
+	color: white;
+	/*padding: 1$ 8%;*/
+	/*padding-bottom: 2%;*/
+	padding-left: 20%;
+	margin-left: 30%;
+	font-size: 1.2vw;
+	font-family: sans-serif;
+	text-align: center;
 }
-
-.dropdown-content{
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9 ;
-    min-width: 160px;
-    box-shadow: black;
-    z-index: 1;
+/*
+.menu-deroulant:hover{
+background-color: blue;
+}*/
+.menu-deroulant .menu-deroulant{
+	margin: 50px;
 }
-
-#menu-deroulant, #menu-deroulant ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-#menu-deroulant {
-/* on centre le menu dans la page */
-    text-align: center;
-}
-#menu-deroulant li {
-/* on place les liens du menu horizontalement */
-    display: inline-block;
-	vertical-align: center;
-	background: black;
-	padding: 5%;
-	margin:10%;
-	padding: 4% 3%;
-	margin: 4% 20%;
-}
-#menu-deroulant ul li {
-/* on enlève ce comportement pour les liens du sous menu */
-    display: inline-block;
-	flex-direction: column;
-	background:red;
-	/*vertical-align: center;*/
-	/*padding: 5% 15%;*/
-	width: 80%;
-}
-#menu-deroulant a {
-    text-decoration: none;
-    display: block;
-	color:#000;
-}
-#menu-deroulant ul {
-    position: absolute;
-/* on cache les sous menus complètement sur la gauche */
-    left: -999em;
-    text-align: left;
-    z-index: 1000;
-}
-#menu-deroulant li:hover ul {
-/* Au survol des li du menu on replace les sous menus */
-    left: auto;
-}
-
 .row {
 	display: block;
 	position: column;
 }
 
 .price{
-	background.color = grey;
 	/*padding: 1% 1.5%;*/
 	border: 2px solid #E5E2E3;
 	/*#FF2990;*/
@@ -145,8 +104,9 @@ txtpanier{
 	margin:2% 0;
 	border: 5px solid black;
 	background-color: black;
-	font-size: 1.7vw;
+	font-size: 1.4vw;
 	font-family: sans-serif;
+	color: white;
 }
 
 .promo {
@@ -164,25 +124,37 @@ txtpanier{
 
 .basket {
 	position: absolute;
-	right: 0%;
-	top: 13%;
-	bottom: 18%;
-	left:88%;
+	left: 88%;
+	right: 28%;
+	top: 30%;
+	bottom: 30%;
 	padding: 0 3%;
 	background-color: #5FB404;
-	border-radius: 60px;
+	/* border-radius: 60px; */
+	color: white;
+	text-align: center;
+	width: 10%;
 }
 
+.inscription:hover{
+	transform: scale(1.4);
+}
+
+.connexion:hover{
+	transform: scale(1.4);
+}
 .inscription{
 	background-color: #2E9AFE;
 	/*#FF8000;*/
 	position: absolute;
 	right: 0%;
-	top: 20%;
-	bottom:20%;
+	top: 30%;
+	bottom:30%;
 	left:74%;
 	padding: 0 1%;
 	border-radius: 10px;
+	transition: .5s;
+	color:white;
 
 }
 
@@ -191,23 +163,57 @@ txtpanier{
 	/*#6A0888;*/
 	position: absolute;
 	right: 0%;
-	top: 20%;
-	bottom:20%;
-	left:62%;
+	top: 30%;
+	bottom:30%;
+	left:64%;
 	border-radius: 10px;
 	padding: 0 1%;
+	transition: .5s;
+	color:white;
 }
 
 .chariot{
-	position:absolute;
-	right:12%;
-	top:13%;
-	bottom: 10%;
-	width:3.2%;
-	height:63%;
-	border-radius: 25px;
+	position: absolute;
+	right: 12%;
+	top: 30%;
+	bottom: 28%;
+	width: 2.4%;
+	height: 40%;
 }
 
 .category{
-	display: inline-flex;
+	display: flex;
+	justify-content: space-around;
+}
+
+.wrapper-list{
+	position: absolute;
+	padding: 0;
+	margin: 0;
+	padding-top: 2.7%;
+	list-style-type: none;
+	display: none;
+}
+
+.menu-deroulant:hover .wrapper-list{
+	display: block;
+}
+.list-content {
+	/*opacity: 0;*/
+	padding: 15px 25px;
+	background: black;
+	text-align: center;
+	margin-left: -8%;
+	margin-top: 0px;
+	font-size: 1.3vw;
+}
+.list-content:hover{
+	background-color: #FE2E64;
+}
+.list-content a {
+	color:white;
+	font-size: 1.2vw;
+	font-family: sans-serif;
+	text-decoration: none;
+
 }
